# path-mapping-bug-2-repro

./: .bazelrc  MODULE.bazel  README.md
example/: BUILD.bazel  Example.java  example_rule.bzl
